# pseqdist

./: .gitignore  Cargo.toml  LICENSE  NOTE.md  README.md
data/: influenza_2k.fa
src/: cli.yml  lib.rs  main.rs  pseqdist.rs
tests/data/: influenza_2k.aln  toy.fa
tests/output/: toy_seqdist.mat
